[gd_scene load_steps=25 format=2]

[ext_resource path="res://art/sprite_walk0.png" type="Texture" id=1]
[ext_resource path="res://art/sprite_walk1.png" type="Texture" id=2]
[ext_resource path="res://art/shooting.png" type="Texture" id=3]
[ext_resource path="res://art/sprite_jumping.png" type="Texture" id=4]
[ext_resource path="res://art/sprite_idle0.png" type="Texture" id=5]
[ext_resource path="res://art/sprite_idle1.png" type="Texture" id=6]
[ext_resource path="res://Player.gd" type="Script" id=7]
[ext_resource path="res://HurtBox.tscn" type="PackedScene" id=8]
[ext_resource path="res://Stats.tscn" type="PackedScene" id=9]
[ext_resource path="res://art/sprite_crouch.png" type="Texture" id=10]
[ext_resource path="res://art/player_bullet_sound.mp3" type="AudioStream" id=11]
[ext_resource path="res://colorcustom.gdshader" type="Shader" id=12]
[ext_resource path="res://art/Hurt_Sound.mp3" type="AudioStream" id=13]
[ext_resource path="res://art/sprite_hurt.png" type="Texture" id=14]

[sub_resource type="ShaderMaterial" id=16]
shader = ExtResource( 12 )
shader_param/red = null
shader_param/green = null
shader_param/blue = null
shader_param/black = null

[sub_resource type="ShaderMaterial" id=9]
shader = ExtResource( 12 )
shader_param/red = Color( 0, 0, 0, 1 )
shader_param/green = null
shader_param/blue = null
shader_param/black = null

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 14 )
region = Rect2( 0, 0, 1024, 1024 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 14 )
region = Rect2( 0, 1024, 1024, 1024 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 1024, 1024 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 3 )
region = Rect2( 0, 1024, 1024, 1024 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 3 )
region = Rect2( 1024, 1024, 1024, 1024 )

[sub_resource type="SpriteFrames" id=13]
animations = [ {
"frames": [ ExtResource( 10 ) ],
"loop": false,
"name": "crouch",
"speed": 1.0
}, {
"frames": [ SubResource( 17 ), SubResource( 18 ) ],
"loop": true,
"name": "hurt",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 6 ) ],
"loop": true,
"name": "idle",
"speed": 3.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": false,
"name": "jump",
"speed": 1.0
}, {
"frames": [ SubResource( 10 ), SubResource( 11 ), SubResource( 12 ) ],
"loop": true,
"name": "shoot",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 2 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 120, 222.125 )

[sub_resource type="RectangleShape2D" id=14]
extents = Vector2( 136, 228 )

[node name="Player" type="KinematicBody2D" groups=["Player"]]
material = SubResource( 16 )
z_index = 2
script = ExtResource( 7 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
material = SubResource( 9 )
position = Vector2( 0, -3 )
frames = SubResource( 13 )
animation = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.5, -41.125 )
shape = SubResource( 2 )

[node name="Location" type="Position2D" parent="."]

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 0.6
one_shot = true

[node name="HurtBox" parent="." groups=["player_body"] instance=ExtResource( 8 )]
collision_layer = 1
collision_mask = 1

[node name="CollisionShape2D" parent="HurtBox" index="0"]
position = Vector2( 0, -47 )
shape = SubResource( 14 )

[node name="PlayerStats" parent="." instance=ExtResource( 9 )]

[node name="ShootSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
volume_db = 2.0

[node name="HurtSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )

[connection signal="health_changed" from="." to="PlayerStats" method="_on_Player_health_changed"]
[connection signal="triple_no_more" from="." to="." method="_on_Player_triple_no_more"]
[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]

[editable path="HurtBox"]
